# spinmaster-api

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yaml  main-py.py  makefile.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
alembic/: env.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: matches.py  players.py  rankings.py  statistics.py  tournaments.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py  crud_base.py  session.py
app/models/: __init__.py  base.py  match.py  player.py  ranking.py  set.py  tournament.py  tournament_player.py
app/schemas/: __init__.py  match.py  player.py  ranking.py  stats.py  tournament.py
app/services/: match_service.py  player_service.py  ranking_service.py  statistics_service.py  tournament_service.py
app/utils/: constants.py  helpers.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: db_management.py  entrypoint.sh  lint.sh  start.sh  test.sh
scripts/postgres/: 01-init.sql
tests/: conftest.py  test_players.py
